@@ -10,6 +10,7 @@ Date: ????
     - Store effects within blueprint tags
     - Add a remote interface through which to update beacons
     - Set beacon effects based on blueprint tags
+    - Fix slider being in the wrong position when opening the gui
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.4
 Date: 2025. 01. 29
